[gd_scene load_steps=28 format=3 uid="uid://ccqtceiee0kl5"]

[ext_resource type="Script" uid="uid://c5f8nhqfamnwi" path="res://main_level.gd" id="1_6614m"]
[ext_resource type="PackedScene" uid="uid://l8pts6tk37vx" path="res://player.tscn" id="2_bhu08"]
[ext_resource type="Texture2D" uid="uid://cnuxttl477wd8" path="res://art/player_slots/slot00.png" id="3_05as6"]
[ext_resource type="Texture2D" uid="uid://dip0yjetq4ogb" path="res://art/player_slots/slot01.png" id="4_5ymk8"]
[ext_resource type="Texture2D" uid="uid://8s77xg53eei8" path="res://art/belt_slots/belt_slot_00.png" id="5_4mnpp"]
[ext_resource type="PackedScene" uid="uid://bfjt7a6d15afl" path="res://rocket.tscn" id="5_xqiim"]
[ext_resource type="Texture2D" uid="uid://c08bc465m4pkn" path="res://art/belt_slots/belt_slot_01.png" id="6_ctebd"]
[ext_resource type="PackedScene" uid="uid://cbtdcsxopxttv" path="res://tags.tscn" id="7_ctebd"]
[ext_resource type="Texture2D" uid="uid://d1arnxvvqm1vb" path="res://art/tags/laundry_icon_wash_full.png" id="9_oeaww"]
[ext_resource type="Texture2D" uid="uid://bjbqy6j0tanv7" path="res://art/tags/laundry_icon_iron_full.png" id="10_aonjr"]
[ext_resource type="Texture2D" uid="uid://dqdw2tdbga11k" path="res://art/tags/laundry_icon_dry_full.png" id="11_do8ha"]
[ext_resource type="Texture2D" uid="uid://cvbcnrft40mc6" path="res://art/trash/trash0.png" id="11_htena"]
[ext_resource type="Texture2D" uid="uid://htuldu4gm64" path="res://art/trash/trash1.png" id="12_xqiim"]
[ext_resource type="Texture2D" uid="uid://bkdyohif7m3g1" path="res://art/trash/trash2.png" id="13_6pb3s"]
[ext_resource type="Texture2D" uid="uid://dsqyian2swg1d" path="res://art/trash/trash3.png" id="14_e3ldi"]

[sub_resource type="SpriteFrames" id="SpriteFrames_htena"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_05as6")
}, {
"duration": 1.0,
"texture": ExtResource("4_5ymk8")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_xqiim"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_05as6")
}, {
"duration": 1.0,
"texture": ExtResource("4_5ymk8")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_6pb3s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_05as6")
}, {
"duration": 1.0,
"texture": ExtResource("4_5ymk8")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_e3ldi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_05as6")
}, {
"duration": 1.0,
"texture": ExtResource("4_5ymk8")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_x2wht"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_05as6")
}, {
"duration": 1.0,
"texture": ExtResource("4_5ymk8")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_52es0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_5ymk8")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_08fmi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_05as6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_8m212"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_5ymk8")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_xjl4t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_05as6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_t3g51"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_5ymk8")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_ah7fh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_htena")
}, {
"duration": 1.0,
"texture": ExtResource("12_xqiim")
}, {
"duration": 1.0,
"texture": ExtResource("13_6pb3s")
}, {
"duration": 1.0,
"texture": ExtResource("14_e3ldi")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_xqiim"]
font_size = 32
font_color = Color(0.0833333, 1, 0, 1)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_6614m")

[node name="bgLayer" type="CanvasLayer" parent="."]

[node name="playerLayer" type="CanvasLayer" parent="."]

[node name="Player" parent="playerLayer" instance=ExtResource("2_bhu08")]
position = Vector2(-88, 31)

[node name="Slot00" type="AnimatedSprite2D" parent="playerLayer"]
position = Vector2(193, 256)
sprite_frames = SubResource("SpriteFrames_htena")
metadata/_edit_group_ = true

[node name="Slot01" type="AnimatedSprite2D" parent="playerLayer"]
position = Vector2(358, 257)
sprite_frames = SubResource("SpriteFrames_xqiim")
metadata/_edit_group_ = true

[node name="Slot02" type="AnimatedSprite2D" parent="playerLayer"]
position = Vector2(541, 254.5)
sprite_frames = SubResource("SpriteFrames_6pb3s")
metadata/_edit_group_ = true

[node name="Slot03" type="AnimatedSprite2D" parent="playerLayer"]
position = Vector2(709, 256)
sprite_frames = SubResource("SpriteFrames_e3ldi")
metadata/_edit_group_ = true

[node name="Slot04" type="AnimatedSprite2D" parent="playerLayer"]
position = Vector2(871, 260)
sprite_frames = SubResource("SpriteFrames_x2wht")
metadata/_edit_group_ = true

[node name="Slot10" type="AnimatedSprite2D" parent="playerLayer"]
position = Vector2(191, 406.5)
sprite_frames = SubResource("SpriteFrames_52es0")
metadata/_edit_group_ = true

[node name="Slot11" type="AnimatedSprite2D" parent="playerLayer"]
position = Vector2(367, 403)
sprite_frames = SubResource("SpriteFrames_08fmi")
metadata/_edit_group_ = true

[node name="Slot12" type="AnimatedSprite2D" parent="playerLayer"]
position = Vector2(550, 399)
sprite_frames = SubResource("SpriteFrames_8m212")
metadata/_edit_group_ = true

[node name="Slot13" type="AnimatedSprite2D" parent="playerLayer"]
position = Vector2(709, 401)
sprite_frames = SubResource("SpriteFrames_xjl4t")
metadata/_edit_group_ = true

[node name="Slot14" type="AnimatedSprite2D" parent="playerLayer"]
position = Vector2(887, 400)
sprite_frames = SubResource("SpriteFrames_t3g51")
metadata/_edit_group_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Node2D" parent="CanvasLayer" instance=ExtResource("7_ctebd")]
position = Vector2(123, 15)

[node name="Node2D2" parent="CanvasLayer" instance=ExtResource("7_ctebd")]
position = Vector2(320, 15)

[node name="Node2D3" parent="CanvasLayer" instance=ExtResource("7_ctebd")]
position = Vector2(473, 15)

[node name="Node2D4" parent="CanvasLayer" instance=ExtResource("7_ctebd")]
position = Vector2(655, 15)

[node name="Node2D5" parent="CanvasLayer" instance=ExtResource("7_ctebd")]
position = Vector2(813, 16)

[node name="Node2D6" parent="CanvasLayer" instance=ExtResource("7_ctebd")]
position = Vector2(115, 599)

[node name="Node2D7" parent="CanvasLayer" instance=ExtResource("7_ctebd")]
position = Vector2(316, 599)

[node name="Node2D8" parent="CanvasLayer" instance=ExtResource("7_ctebd")]
position = Vector2(500, 594)

[node name="Node2D10" parent="CanvasLayer" instance=ExtResource("7_ctebd")]
position = Vector2(673, 596)

[node name="Node2D9" parent="CanvasLayer" instance=ExtResource("7_ctebd")]
position = Vector2(838, 594)

[node name="tshirtLayer" type="CanvasLayer" parent="."]

[node name="BeltSlot00" type="Sprite2D" parent="tshirtLayer"]
position = Vector2(186, 136.5)
texture = ExtResource("5_4mnpp")

[node name="BeltSlot01" type="Sprite2D" parent="tshirtLayer"]
position = Vector2(382, 138)
texture = ExtResource("6_ctebd")

[node name="BeltSlot02" type="Sprite2D" parent="tshirtLayer"]
position = Vector2(533, 139.5)
texture = ExtResource("5_4mnpp")

[node name="BeltSlot03" type="Sprite2D" parent="tshirtLayer"]
position = Vector2(725, 139.5)
texture = ExtResource("6_ctebd")

[node name="BeltSlot04" type="Sprite2D" parent="tshirtLayer"]
position = Vector2(869, 142)
texture = ExtResource("5_4mnpp")

[node name="BeltSlot10" type="Sprite2D" parent="tshirtLayer"]
position = Vector2(190, 532.5)
texture = ExtResource("6_ctebd")

[node name="BeltSlot11" type="Sprite2D" parent="tshirtLayer"]
position = Vector2(363, 527)
texture = ExtResource("5_4mnpp")

[node name="BeltSlot12" type="Sprite2D" parent="tshirtLayer"]
position = Vector2(565, 530)
texture = ExtResource("6_ctebd")

[node name="BeltSlot13" type="Sprite2D" parent="tshirtLayer"]
position = Vector2(718, 523)
texture = ExtResource("5_4mnpp")

[node name="BeltSlot14" type="Sprite2D" parent="tshirtLayer"]
position = Vector2(902, 530)
texture = ExtResource("6_ctebd")

[node name="Trash" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(1034, 401)
sprite_frames = SubResource("SpriteFrames_ah7fh")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="TakenTags" type="Node2D" parent="HUD"]
position = Vector2(999, 492)

[node name="TakenWash" type="Sprite2D" parent="HUD/TakenTags"]
unique_name_in_owner = true
position = Vector2(32.5, 48.511)
scale = Vector2(0.404412, 0.404412)
texture = ExtResource("9_oeaww")

[node name="TakenDry" type="Sprite2D" parent="HUD/TakenTags"]
unique_name_in_owner = true
position = Vector2(36.5, 103.511)
scale = Vector2(0.382353, 0.382353)
texture = ExtResource("11_do8ha")

[node name="TakenIron" type="Sprite2D" parent="HUD/TakenTags"]
unique_name_in_owner = true
position = Vector2(83.5, 64.511)
scale = Vector2(0.507353, 0.507353)
texture = ExtResource("10_aonjr")

[node name="RandomTags" type="Node2D" parent="HUD"]

[node name="RandomWash" type="Sprite2D" parent="HUD/RandomTags"]
unique_name_in_owner = true
position = Vector2(47, 237)
scale = Vector2(0.404412, 0.404412)
texture = ExtResource("9_oeaww")

[node name="RandomDry" type="Sprite2D" parent="HUD/RandomTags"]
unique_name_in_owner = true
position = Vector2(51, 292)
scale = Vector2(0.382353, 0.382353)
texture = ExtResource("11_do8ha")

[node name="RandomIron" type="Sprite2D" parent="HUD/RandomTags"]
unique_name_in_owner = true
position = Vector2(98, 253)
scale = Vector2(0.507353, 0.507353)
texture = ExtResource("10_aonjr")

[node name="Rocket" parent="HUD" instance=ExtResource("5_xqiim")]
position = Vector2(997, 216)

[node name="Points" type="Label" parent="HUD"]
offset_left = 1067.0
offset_top = 23.0
offset_right = 1107.0
offset_bottom = 68.0
text = "00"
label_settings = SubResource("LabelSettings_xqiim")

[connection signal="action" from="playerLayer/Player" to="." method="_on_player_action"]
[connection signal="moved" from="playerLayer/Player" to="." method="_on_player_moved"]
